--- a/profile.html
+++ b/profile.html
@@ -12,124 +12,149 @@
         <link rel="icon" type="image/png" href="media/img/tabicon.png">
     </head>
     <body>
-        <div>
-            <!--Headings for website-->
-            <h1 class = "center">
-                <a class = index href="/">Justin Park</a>
-            </h1>
-            <h2 class = "center">
-                parkaxp@bc.edu|201-663-2139
-            </h2>
-            <table>
-                <tr>
-                    <!--Links to navigate through the different webpages-->
-                    <td class = links><a class = nav href="profile.html">Profile</a></td>
-                    <!-- <td class = links><a class = nav href="resume.html">Resume</a></td> -->
-                    <td class = links><a class = nav href="projects.html">Projects</a></td>
-                </tr>
-            </table>
-        </div>
-            <!--Insert line break-->
-            <hr class="solid">
-            <!--Scroll Snap Start-->
-            <div class="parent">
-                <!--First element within scroll snap-->
-                <li class="snap">
-                    <!--Individual containers within each scroll snap element with transition style classes-->
-                    <div class= 'container'>
-                        <div class="container_content">
-                            <div class="container_content_inner">
-                                <!--Title with text-->
-                                <div class="hide_title">
-                                    <h1 class = "title">About Me</h1>
-                                </div>
-                                <div class="hide_p">
-                                    <p class="p">
-                                        Hello, my name is Justin Park and I am an aspiring software engineer studying at Boston College. I am currently a junior and am pursuing a Bachelor in Science in Computer Science and Major in Economics.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <!--Image-->
-                        <div class="container_outer_img">
-                            <img src='media/img/BC_Selfie.jpg'  alt="" class="container_img"/>
-                        </div>
-                    </div>
-                </li>
-                <!--Each future iteration of the element is slightly altered for style, but largely the same format-->
-                <li class="snap">
-                    <div class= 'container off'>
-                        <div class="container_outer_img">
-                            <img src='media/img/aerok.jpg'  alt="" class="container_img picture_resize"/>
-                        </div>
-                        <div class="container_content">
-                            <div class="container_content_inner">
-                                <div class="hide_title">
-                                    <h1 class = "title">Hobbies</h1>
-                                </div>
-                                <div class="hide_p">
-                                    <p class="p">
-                                        In my free time, I like to dance with my college dance team, AeroK, or go to the gym. I also like to watch shows (right now I really like Daredevil and Vincenzo), play games of all kinds, and sing in the shower.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="snap">
-                    <div class= 'container'>
-                        <div class="container_outer_img">
-                            <img src='media/img/cowboyhat.jpg'  alt="" class="container_img picture_resize"/>
-                        </div>
-                        <div class="container_content">
-                            <div class="container_content_inner">
-                                <div class="hide_title">
-                                    <h1 class = "title">Young</h1>
-                                </div>
-                                <div class="hide_p">
-                                    <p class="p">
-                                        When I was young, I was extremely interested in playing the piano and being in musicals. The picture in the top right is me playing piano at Merkin Hall and the picture on the bottom right is me playing Dan Schwartz in "25th Annual Putnam County Spelling Bee".
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="container_outer_img">
-                            <img src='media/img/piano.jpg'  alt="" class="container_img picture_resize1"/>
-                            <img src='media/img/theatre.jpg'  alt="" class="container_img picture_resize"/>  
-                        </div>
-                    </div>
-                </li>
-                <li class="snap">
-                    <div class= 'container off'>
-                        <div class="container_content">
-                            <div class="container_content_inner">
-                                <div class="hide_p">
-                                    <p class="p">
-                                        Enjoy a picture of my dogs! 
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="container_outer_img">
-                            <img src='media/img/jamieari.jpg'  alt="" class="container_img picture_resize"/>
-                        </div>
-                    </div>
-                </li>
+        <div id="mainwindow" style="position:absolute; height:723px; width:1441px; top:0; bottom:0; left:0; right:0; margin:auto; overflow:hidden;">
+            <div>
+                <!--Headings for website-->
+                <h1 class = "center">
+                    <a class = index href="/">Justin Park</a>
+                </h1>
+                <h2 class = "center">
+                    parkaxp@bc.edu|201-663-2139
+                </h2>
+                <table>
+                    <tr>
+                        <!--Links to navigate through the different webpages-->
+                        <td class = links><a class = nav href="profile.html">Profile</a></td>
+                        <!-- <td class = links><a class = nav href="resume.html">Resume</a></td> -->
+                        <td class = links><a class = nav href="projects.html">Projects</a></td>
+                    </tr>
+                </table>
             </div>
-        <div>
-            <hr class="solid">
-            <!--Links to different social media-->
-            <div class="center">
-                <ul>
-                    <li><a class = media href="https://www.instagram.com/justindpark_/"><i class="fab fa-instagram"></i></a></li>
-                    <li><a class = media href="https://www.linkedin.com/in/justin-park-79800a202/"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a class = media href="https://github.com/JustinPark845"><i class="fab fa-github-square"></i></a></li>
-                </ul>
-                <!--Year established-->
-                <div>
-                    2021 ◦ Justin Park
+                <!--Insert line break-->
+                <hr class="solid">
+                <!--Scroll Snap Start-->
+                <div class="parent">
+                    <!--First element within scroll snap-->
+                    <li class="snap">
+                        <!--Individual containers within each scroll snap element with transition style classes-->
+                        <div class= 'container'>
+                            <div class="container_content">
+                                <div class="container_content_inner">
+                                    <!--Title with text-->
+                                    <div class="hide_title">
+                                        <h1 class = "title">About Me</h1>
+                                    </div>
+                                    <div class="hide_p">
+                                        <p class="p">
+                                            Hello, my name is Justin Park and I am an aspiring software engineer studying at Boston College. I am currently a junior and am pursuing a Bachelor in Science in Computer Science and Major in Economics.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--Image-->
+                            <div class="container_outer_img">
+                                <img src='media/img/BC_Selfie.jpg'  alt="" class="container_img"/>
+                            </div>
+                        </div>
+                    </li>
+                    <!--Each future iteration of the element is slightly altered for style, but largely the same format-->
+                    <li class="snap">
+                        <div class= 'container off'>
+                            <div class="container_outer_img">
+                                <img src='media/img/aerok.jpg'  alt="" class="container_img picture_resize"/>
+                            </div>
+                            <div class="container_content">
+                                <div class="container_content_inner">
+                                    <div class="hide_title">
+                                        <h1 class = "title">Computer Science Background</h1>
+                                    </div>
+                                    <div class="hide_p">
+                                        <p class="p">
+                                            In my free time, I like to dance with my college dance team, AeroK, or go to the gym. I also like to watch shows (right now I really like Daredevil and Vincenzo), play games of all kinds, and sing in the shower.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="snap">
+                        <div class= 'container off'>
+                            <div class="container_outer_img">
+                                <img src='media/img/aerok.jpg'  alt="" class="container_img picture_resize"/>
+                            </div>
+                            <div class="container_content">
+                                <div class="container_content_inner">
+                                    <div class="hide_title">
+                                        <h1 class = "title">Hobbies</h1>
+                                    </div>
+                                    <div class="hide_p">
+                                        <p class="p">
+                                            In my free time, I like to dance with my college dance team, AeroK, or go to the gym. I also like to watch shows (right now I really like Daredevil and Vincenzo), play games of all kinds, and sing in the shower.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="snap">
+                        <div class= 'container'>
+                            <div class="container_outer_img">
+                                <img src='media/img/cowboyhat.jpg'  alt="" class="container_img picture_resize"/>
+                            </div>
+                            <div class="container_content">
+                                <div class="container_content_inner">
+                                    <div class="hide_title">
+                                        <h1 class = "title">Young</h1>
+                                    </div>
+                                    <div class="hide_p">
+                                        <p class="p">
+                                            When I was young, I was extremely interested in playing the piano and being in musicals. The picture in the top right is me playing piano at Merkin Hall and the picture on the bottom right is me playing Dan Schwartz in "25th Annual Putnam County Spelling Bee".
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="container_outer_img">
+                                <img src='media/img/piano.jpg'  alt="" class="container_img picture_resize1"/>
+                                <img src='media/img/theatre.jpg'  alt="" class="container_img picture_resize"/>  
+                            </div>
+                        </div>
+                    </li>
+                    <li class="snap">
+                        <div class= 'container off'>
+                            <div class="container_content">
+                                <div class="container_content_inner">
+                                    <div class="hide_p">
+                                        <p class="p">
+                                            Enjoy a picture of my dogs! 
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="container_outer_img">
+                                <img src='media/img/jamieari.jpg'  alt="" class="container_img picture_resize"/>
+                            </div>
+                        </div>
+                    </li>
+                </div>
+            <div>
+                <hr class="solid">
+                <!--Links to different social media-->
+                <div class="center">
+                    <ul>
+                        <li><a class = media href="https://www.instagram.com/justindpark_/"><i class="fab fa-instagram"></i></a></li>
+                        <li><a class = media href="https://www.linkedin.com/in/justin-park-79800a202/"><i class="fab fa-linkedin"></i></a></li>
+                        <li><a class = media href="https://github.com/JustinPark845"><i class="fab fa-github-square"></i></a></li>
+                    </ul>
+                    <!--Year established-->
+                    <div>
+                        2021 ◦ Justin Park
+                    </div>
                 </div>
             </div>
         </div>
+        <!--disclaimer statement regarding screen size-->
+        <button id="disclaimerbutton" onclick="hide()" style="display:none;"></button>
+        <label for="disclaimerbutton" id="disclaimer" style="position:absolute; color:gray; cursor:pointer;">having trouble with the screen size? try going horizontal on your phone, or refresh the page after you adjust to a preferred size! otherwise click to hide.</label>
     </body>
+    <script src="static/js/scripts.js"></script>
 </html>
