--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="icon" type="image/png" href="media/img/tabicon.png">
     </head>
     <body>
-        <div id="mainwindow" style="position:absolute; height:723px; width:1441px; top:0; bottom:0; left:0; right:0; margin:auto; overflow:hidden;">
+        <div id="mainwindow" style="position:absolute; height:723px; width:1441px; top:0; bottom:0; left:0; right:0; margin:auto; overflow:hidden; background-color:red;">
             <div>
                 <!--Headings for website-->
                 <h1 class = "center">
