--- a/index.html
+++ b/index.html
@@ -6,53 +6,48 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-        <link href = "static/css/styles.css" rel = "stylesheet">
+        <link href = "css/styles.css" rel = "stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" rel="stylesheet">
         <title>Welcome to my Homepage</title>
         <link rel="icon" type="image/png" href="media/img/tabicon.png">
     </head>
     <body>
-        <div id="mainwindow" style="position:absolute; height:723px; width:1441px; top:0; bottom:0; left:0; right:0; margin:auto; overflow:hidden; background-color:red;">
-            <div>
-                <!--Headings for website-->
-                <h1 class = "center">
-                    <a class = index href="/">Justin Park</a>
-                </h1>
-                <h2 class = "center">
-                    parkaxp@bc.edu|201-663-2139
-                </h2>
-                <table>
-                    <tr>
-                        <!--Links to navigate through the different webpages-->
-                        <td class = links><a class = nav href="profile.html">Profile</a></td>
-                        <!-- <td class = links><a class = nav href="resume.html">Resume</a></td> -->
-                        <td class = links><a class = nav href="projects.html">Projects</a></td>
-                    </tr>
-                </table>
-            </div>
-            <!--Home Screen Photo-->
-            <div class = "center">
-                <img alt ="ambient coding" src="media/img/ambient_coding.jpg" width = "50%" height = "50%">
-            </div>
-            <div>
-                <hr class="solid">
-                <!--Links to different social media-->
-                <div class="center">
-                    <ul>
-                        <li><a class = media href="https://www.instagram.com/justindpark_/"><i class="fab fa-instagram"></i></a></li>
-                        <li><a class = media href="https://www.linkedin.com/in/justin-park-79800a202/"><i class="fab fa-linkedin"></i></a></li>
-                        <li><a class = media href="https://github.com/JustinPark845"><i class="fab fa-github-square"></i></a></li>
-                    </ul>
-                    <!--Year established-->
-                    <div>
-                        2021 ◦ Justin Park
-                    </div>
+        <div>
+            <!--Headings for website-->
+            <h1 class = "center">
+                <a class = index href="/">Justin Park</a>
+            </h1>
+            <h2 class = "center">
+                parkaxp@bc.edu|201-663-2139
+            </h2>
+            <table>
+                <tr>
+                    <!--Links to navigate through the different webpages-->
+                    <td class = links><a class = nav href="profile.html">Profile</a></td>
+                    <!-- <td class = links><a class = nav href="resume.html">Resume</a></td> -->
+                    <td class = links><a class = nav href="projects.html">Projects</a></td>
+                </tr>
+            </table>
+        </div>
+        <!--Home Screen Photo-->
+        <div class = "center">
+            <img alt ="ambient coding" src="media/img/ambient_coding.jpg" width = "80%" height = "80%">
+        </div>
+        <div>
+            <hr class="solid">
+            <!--Links to different social media-->
+            <div class="center">
+                <ul>
+                    <li><a class = media href="https://www.instagram.com/justindpark_/"><i class="fab fa-instagram"></i></a></li>
+                    <li><a class = media href="https://www.linkedin.com/in/justin-park-79800a202/"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a class = media href="https://github.com/JustinPark845"><i class="fab fa-github-square"></i></a></li>
+                </ul>
+                <!--Year established-->
+                <div>
+                    2021 ◦ Justin Park
                 </div>
             </div>
         </div>
-        <!--disclaimer statement regarding screen size-->
-        <button id="disclaimerbutton" onclick="hide()" style="display:none;"></button>
-        <label for="disclaimerbutton" id="disclaimer" style="position:absolute; color:gray; cursor:pointer;">having trouble with the screen size? try going horizontal on your phone, or refresh the page after you adjust to a preferred size! otherwise click to hide.</label>
     </body>
-    <script src="static/js/scripts.js"></script>
+    <script src="/static/scripts.js"></script>
 </html>
