--- a/index.html
+++ b/index.html
@@ -13,37 +13,37 @@
     </head>
     <body>
         <div>
-            <!--Headings for website-->
-            <h1 class = "center">
-                <a class = index href="/">Justin Park</a>
-            </h1>
-            <h2 class = "center">
-                parkaxp@bc.edu|201-663-2139
-            </h2>
-            <table>
-                <tr>
-                    <!--Links to navigate through the different webpages-->
-                    <td class = links><a class = nav href="profile.html">Profile</a></td>
-                    <!-- <td class = links><a class = nav href="resume.html">Resume</a></td> -->
-                    <td class = links><a class = nav href="projects.html">Projects</a></td>
-                </tr>
-            </table>
-        </div>
-        <!--Home Screen Photo-->
-        <div class = "center">
-            <img alt ="ambient coding" src="media/img/ambient_coding.jpg" width = "80%" height = "80%">
-        </div>
-        <div>
-            <hr class="solid">
-            <!--Links to different social media-->
-            <div class="center">
-                <ul>
-                    <li><a class = media href="https://www.instagram.com/justindpark_/"><i class="fab fa-instagram"></i></a></li>
-                    <li><a class = media href="https://www.linkedin.com/in/justin-park-79800a202/"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a class = media href="https://github.com/JustinPark845"><i class="fab fa-github-square"></i></a></li>
-                </ul>
+            <div>
+                <!--Headings for website-->
+                <h5 class = "center">
+                    <a class = index href="/">Justin Park</a>
+                </h5>
+                <h2 class = "center">
+                    parkaxp@bc.edu|201-663-2139
+                </h2>
+                <table>
+                    <tr>
+                        <!--Links to navigate through the different webpages-->
+                        <td class = links><a class = nav href="profile.html">Profile</a></td>
+                        <!-- <td class = links><a class = nav href="resume.html">Resume</a></td> -->
+                        <td class = links><a class = nav href="projects.html">Projects</a></td>
+                    </tr>
+                </table>
+            </div>
+            <!--Home Screen Photo-->
+            <div class = "center">
+                <img alt ="ambient coding" src="media/img/ambient_coding.jpg" width = "50%" height = "50%">
+            </div>
+            <div>
+                <hr class="solid">
+                <!--Links to different social media-->
+                <div class="center media_box">
+                    <div><a class = media href="https://www.instagram.com/justindpark_/"><i class="fab fa-instagram"></i></a></div>
+                    <div><a class = media href="https://www.linkedin.com/in/justin-park-79800a202/"><i class="fab fa-linkedin"></i></a></div>
+                    <div><a class = media href="https://github.com/JustinPark845"><i class="fab fa-github-square"></i></a></div>
+                </div>
                 <!--Year established-->
-                <div>
+                <div class = "center">
                     2021 ◦ Justin Park
                 </div>
             </div>
