--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-        <link href = "./static/style.css" rel = "stylesheet">
+        <link href = "css/style.css" rel = "stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" rel="stylesheet">
         <title>Welcome to my Homepage</title>
         <link rel="icon" type="image/png" href="media/img/tabicon.png">
@@ -51,7 +51,7 @@
                             </div>
                             <!--Image-->
                             <div class="container_content_img">
-                                <img src='./media/img/BC_Selfie.jpg'  alt="" class="container_img" style="z-index=1"/>
+                                <img src='media/img/BC_Selfie.jpg'  alt="" class="container_img" style="z-index=1"/>
                             </div>
                         </div>
                     </li>
@@ -61,7 +61,7 @@
                         <div class= 'container off'>
                             <!--Image-->
                             <div class="container_content_img">
-                                <img src='./media/img/BC_Selfie.jpg'  alt="" class="container_img"/>
+                                <img src='media/img/BC_Selfie.jpg'  alt="" class="container_img"/>
                             </div>
                             <div class="container_content_description">
                                 <!--Title with text-->
@@ -87,15 +87,15 @@
                                 </div>
                             </div>
                             <div class="container_content_img">
-                                <img src='./media/img/aerok.jpg'  alt="" class="container_img" style="z-index=1"/>
+                                <img src='media/img/aerok.jpg'  alt="" class="container_img" style="z-index=1"/>
                             </div>
                         </div>
                     </li>
                     <li class="snap">
                         <div class= 'container off'>
                             <div class="container_content_img">
-                                <img src='./media/img/piano.jpg'  alt="" class="container_img"/>
-                                <img src='./media/img/theatre.jpg'  alt="" class="container_img"/>                              </div>
+                                <img src='media/img/piano.jpg'  alt="" class="container_img"/>
+                                <img src='media/img/theatre.jpg'  alt="" class="container_img"/>                              </div>
                             <div class="container_content_description">
                                 <h1 class = "title">Young</h1>
                                 <div class="hide_p">
@@ -119,7 +119,7 @@
                                 </div>
                             </div>
                             <div class="container_content_img">
-                                <img src='./media/img/jamieari.jpg'  alt="" class="container_img" style="z-index=1"/>
+                                <img src='media/img/jamieari.jpg'  alt="" class="container_img" style="z-index=1"/>
                             </div>
                         </div>
                     </li>
