--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-        <link href = "./static/style.css" rel = "stylesheet">
+        <link href = "css/style.css" rel = "stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" rel="stylesheet">
         <title>Welcome to my Homepage</title>
         <link rel="icon" type="image/png" href="media/img/tabicon.png">
@@ -52,7 +52,7 @@
                             <!--Image-->
                             <div class="container_content_img">
                                 <video width="100%" autoplay loop>
-                                    <source src="./media/mp4/connecdinghome.mp4" type="video/mp4">
+                                    <source src="media/mp4/connecdinghome.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                            
                             </div>
@@ -65,7 +65,7 @@
                             <!--Image-->
                             <div class="container_content_img">
                                 <video width="100%" autoplay loop>
-                                    <source src="./media/mp4/connecdingapp.mp4" type="video/mp4">
+                                    <source src="media/mp4/connecdingapp.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                            
                             </div>
@@ -94,7 +94,7 @@
                             </div>
                             <div class="container_content_img">
                                 <video width="100%" autoplay loop>
-                                    <source src="./media/mp4/RPCA.mp4" type="video/mp4">
+                                    <source src="media/mp4/RPCA.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                            
                             </div>
@@ -104,7 +104,7 @@
                         <div class= 'container off'>
                             <div class="container_content_img">
                                 <video width="100%" autoplay loop>
-                                    <source src="./media/mp4/AAO.mp4" type="video/mp4">
+                                    <source src="media/mp4/AAO.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                       
                             </div>
@@ -132,7 +132,7 @@
                             </div>
                             <div class="container_content_img">
                                 <video width="100%" autoplay loop>
-                                    <source src="./media/mp4/tetris.mp4" type="video/mp4">
+                                    <source src="media/mp4/tetris.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                            
                             </div>
@@ -142,7 +142,7 @@
                         <div class= 'container off'>
                             <div class="container_content_img">
                                 <video width="100%" autoplay loop>
-                                    <source src="./media/mp4/pong.mp4" type="video/mp4">
+                                    <source src="media/mp4/pong.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                    
                             </div>
@@ -170,7 +170,7 @@
                             </div>
                             <div class="container_content_img">
                                 <video width="100%" autoplay loop>
-                                    <source src="./media/mp4/snake.mp4" type="video/mp4">
+                                    <source src="media/mp4/snake.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                     
                             </div>
