--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
                             <!--Image-->
                             <div class="container_content_img">
                                 <video width="100%" autoplay loop>
-                                    <source src="media/mp4/connecdinghome.mp4" type="video/mp4">
+                                    <div style="margin:auto;"><source src="media/mp4/connecdinghome.mp4" type="video/mp4"></div>
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                            
                             </div>
@@ -65,7 +65,7 @@
                             <!--Image-->
                             <div class="container_content_img">
                                 <video width="100%" autoplay loop>
-                                    <source src="media/mp4/connecdingapp.mp4" type="video/mp4">
+                                    <div style="margin:auto;"><source src="media/mp4/connecdingapp.mp4" type="video/mp4"></div>
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                            
                             </div>
@@ -94,7 +94,7 @@
                             </div>
                             <div class="container_content_img">
                                 <video width="100%" autoplay loop>
-                                    <source src="media/mp4/RPCA.mp4" type="video/mp4">
+                                    <div style="margin:auto;"><source src="media/mp4/RPCA.mp4" type="video/mp4"></div>
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                            
                             </div>
@@ -104,7 +104,7 @@
                         <div class= 'container off'>
                             <div class="container_content_img">
                                 <video width="100%" autoplay loop>
-                                    <source src="media/mp4/AAO.mp4" type="video/mp4">
+                                    <div style="margin:auto;"><source src="media/mp4/AAO.mp4" type="video/mp4"></div>
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                       
                             </div>
@@ -132,7 +132,7 @@
                             </div>
                             <div class="container_content_img">
                                 <video width="100%" autoplay loop>
-                                    <source src="media/mp4/tetris.mp4" type="video/mp4">
+                                    <div style="margin:auto;"><source src="media/mp4/tetris.mp4" type="video/mp4"></div>
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                            
                             </div>
@@ -142,7 +142,7 @@
                         <div class= 'container off'>
                             <div class="container_content_img">
                                 <video width="100%" autoplay loop>
-                                    <source src="media/mp4/pong.mp4" type="video/mp4">
+                                    <div style="margin:auto;"><source src="media/mp4/pong.mp4" type="video/mp4"></div>
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                    
                             </div>
@@ -170,7 +170,7 @@
                             </div>
                             <div class="container_content_img">
                                 <video width="100%" autoplay loop>
-                                    <source src="media/mp4/snake.mp4" type="video/mp4">
+                                    <div style="margin:auto;"><source src="media/mp4/snake.mp4" type="video/mp4"></div>
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                     
                             </div>
