--- a/projects.html
+++ b/projects.html
@@ -51,8 +51,8 @@
                             </div>
                             <!--Image-->
                             <div class="container_content_img">
-                                <video width="100%" autoplay loop>
-                                    <div style="margin:auto;"><source src="media/mp4/connecdinghome.mp4" type="video/mp4"></div>
+                                <video style="margin:auto;" width="100%" autoplay loop>
+                                    <source src="media/mp4/connecdinghome.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                            
                             </div>
@@ -64,8 +64,8 @@
                         <div class= 'container off'>
                             <!--Image-->
                             <div class="container_content_img">
-                                <video width="100%" autoplay loop>
-                                    <div style="margin:auto;"><source src="media/mp4/connecdingapp.mp4" type="video/mp4"></div>
+                                <video style="margin:auto;" width="100%" autoplay loop>
+                                    <source src="media/mp4/connecdingapp.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                            
                             </div>
@@ -93,8 +93,8 @@
                                 </div>
                             </div>
                             <div class="container_content_img">
-                                <video width="100%" autoplay loop>
-                                    <div style="margin:auto;"><source src="media/mp4/RPCA.mp4" type="video/mp4"></div>
+                                <video style="margin:auto;" width="100%" autoplay loop>
+                                    <source src="media/mp4/RPCA.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                            
                             </div>
@@ -104,7 +104,7 @@
                         <div class= 'container off'>
                             <div class="container_content_img">
                                 <video width="100%" autoplay loop>
-                                    <div style="margin:auto;"><source src="media/mp4/AAO.mp4" type="video/mp4"></div>
+                                    <source style="margin:auto;" src="media/mp4/AAO.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                       
                             </div>
@@ -131,8 +131,8 @@
                                 </div>
                             </div>
                             <div class="container_content_img">
-                                <video width="100%" autoplay loop>
-                                    <div style="margin:auto;"><source src="media/mp4/tetris.mp4" type="video/mp4"></div>
+                                <video style="margin:auto;" width="100%" autoplay loop>
+                                    <source src="media/mp4/tetris.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                            
                             </div>
@@ -141,8 +141,8 @@
                     <li class="snap">
                         <div class= 'container off'>
                             <div class="container_content_img">
-                                <video width="100%" autoplay loop>
-                                    <div style="margin:auto;"><source src="media/mp4/pong.mp4" type="video/mp4"></div>
+                                <video style="margin:auto;" width="100%" autoplay loop>
+                                    <source src="media/mp4/pong.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                    
                             </div>
@@ -169,8 +169,8 @@
                                 </div>
                             </div>
                             <div class="container_content_img">
-                                <video width="100%" autoplay loop>
-                                    <div style="margin:auto;"><source src="media/mp4/snake.mp4" type="video/mp4"></div>
+                                <video style="margin:auto;" width="100%" autoplay loop>
+                                    <source src="media/mp4/snake.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                     
                             </div>
